cabal-version:      2.4
name:               ernie
version:            0.1.0.0

synopsis: Project planning with PERT estimates
bug-reports: https://github.com/j-mueller/ernie
license: BSD-3-Clause
author:             Jann Müller
maintainer:         j-mueller@users.noreply.github.com
copyright: (c) 2022 Jann Müller
category: planning
extra-source-files: CHANGELOG.md

common base
  build-depends: base ^>=4.14.3.0

common project-config
  default-language:     Haskell2010

  default-extensions:   GeneralizedNewtypeDeriving
                        ImportQualifiedPost
                        OverloadedStrings
                        NumericUnderscores
                        DerivingStrategies
                        DeriveGeneric
                        DeriveFunctor
                        DeriveFoldable
                        DeriveTraversable
                        DeriveAnyClass

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

library
  import: base, project-config
  hs-source-dirs: lib
  exposed-modules:
    Ernie
    Ernie.Chart
    Ernie.Example
    Ernie.Export
    Ernie.Measure
    Ernie.PERT
    Ernie.Sample
    Ernie.Task
    Ernie.Time
    Ernie.Utils
  build-depends:
    floyd-warshall
  build-depends:
    aeson
    , mwc-probability
    , primitive
    , containers
    , text
    , streaming
    , mtl
    , transformers
    , lens
    , profunctors
    , algebraic-graphs
    , reflection

executable ernie
  import:           base
  main-is:          Main.hs
  hs-source-dirs:   app
