cabal-version:      2.4
name:               ernie
version:            0.2.0.0
synopsis:           Project planning with PERT estimates
bug-reports:        https://github.com/j-mueller/ernie
license:            BSD-3-Clause
author:             Jann Müller
maintainer:         j-mueller@users.noreply.github.com
copyright:          (c) 2024 Jann Müller
category:           planning
extra-source-files: CHANGELOG.md

common base
  build-depends: base >=4.14 && <5

common project-config
  default-language:   Haskell2010
  default-extensions:
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    NumericUnderscores
    OverloadedStrings

  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -Wunused-packages

library
  import:          base, project-config
  hs-source-dirs:  lib
  exposed-modules:
    Ernie
    Ernie.Chart
    Ernie.CLI
    Ernie.Example
    Ernie.Export
    Ernie.JSONTask
    Ernie.Measure
    Ernie.PERT
    Ernie.Sample
    Ernie.Task
    Ernie.Time
    Ernie.Utils

    Sesame.Event
    Sesame.Project
    Sesame.Relation
    Sesame.Var
  build-depends:
    , aeson
    , bytestring
    , containers
    , filepath
    , fsnotify
    , graphviz
    , HsYAML
    , HsYAML-aeson
    , lens
    , mtl
    , mwc-probability
    , optparse-applicative
    , primitive
    , profunctors
    , streaming
    , tdigest
    , text
    , transformers
    , time

executable ernie-cli
  import:         base, project-config
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:  ernie
