cabal-version:      2.4
name:               floyd-warshall
version:            0.2.0.0

synopsis: Implementation of the floyd-warshall algorithm
description: Implementation of the floyd-warshall algorithm in pure Haskell. Includes vectors and matrices with statically checked sizes. Could probably be faster.
bug-reports: https://github.com/j-mueller/ernie

license: BSD-3-Clause
author:             Jann Müller
maintainer:         j-mueller@users.noreply.github.com
copyright: (c) 2024 Jann Müller

category: algorithms
extra-source-files: CHANGELOG.md

common base
  build-depends: base >=4.14 && < 5

common project-config
  default-language:     Haskell2010

  default-extensions:   GeneralizedNewtypeDeriving
                        ImportQualifiedPost
                        OverloadedStrings
                        NumericUnderscores
                        DerivingStrategies
                        DeriveGeneric
                        DeriveFunctor
                        DeriveFoldable
                        DeriveTraversable
                        DeriveAnyClass
                        DerivingVia
                        TypeApplications

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

library
  import: base, project-config
  hs-source-dirs: lib
  exposed-modules:
    Data.Semiring
    FW.Matrix
    FW.Vector
  build-depends:
    matrix,
    linear

test-suite floyd-warshall-test
  import: base, project-config
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  main-is: Main.hs
  hs-source-dirs: test
  build-depends:
    floyd-warshall
  build-depends:
      tasty -any,
      tasty-quickcheck -any,
      QuickCheck -any,
      linear -any